test/src/e2e_vm_tests/test_programs/should_fail/configurables_undefined_var/src/main.sw
script;

configurable {
    VALUE: u64 = DOES_NOT_EXIST,
}

fn main() { }
